# sfse-template

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: DeployPlugin.cmake  FetchSFSE.cmake
src/: PCH.h  Plugin.cpp
